WIP can't figure out how to test PizzaOrder.prototype.selectTopping because it needs to grab value from the radio buttons. Can't get the basic constructor to accept a value for topping.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <h2>Select your toppings:</h2>
           <form id="radio-topping">
             <label>
-              <input type="radio" name="topping" value="1" checked>
+              <input type="radio" name="topping" value="none" checked>
               None
             </label><br>
             
             <label>
-              <input type="radio" name="topping" value="2">
+              <input type="radio" name="topping" value="pepperoni">
               Pepperoni
             </label><br>
         <br>
@@ -28,12 +28,12 @@
         <h2>Select your size:</h2>
           <form id="radio-size">
             <label>
-              <input type="radio" name="size" value="1" checked>
+              <input type="radio" name="size" value="personal" checked>
               Personal
             </label><br>
             
             <label>
-              <input type="radio" name="size" value="2">
+              <input type="radio" name="size" value="family">
               Family
             </label><br>
           </form>
@@ -42,5 +42,6 @@
         <button type="submit">Submit!</button>
       </form>
     </div>
+    <div id ="show-price"></div>
   </body>
 </html>
