Added another test to README.md, still failed.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="welcome">
-      <h1>Welcome to the Pizza Parlor</h1>
+      <h1>Welcome to the Pizza Parlor!</h1>
       <form id="order">
         <p>The base pizza is a margherita pizza, with sauce and cheese. Please use the boxes below to select additional topics to taste, and select your preferred size. Click the submit button to see your final price.</p>
         <br>
